Configuração correta do script para gerar dados no banco PetShopBand

--- a/petShopBAND/src/main/resources/application.properties
+++ b/petShopBAND/src/main/resources/application.properties
@@ -1,7 +1,22 @@
 #JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 #H2
+#spring.h2.console.enabled=true
+
+spring.jpa.open-in-view=false
+
+#h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+#Configuraçãao do cliente 
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#Mostrar a consulto no console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
