Erro ao fazer o mapeamento de classes das entidades com o lombok, pesquisar melhor como fazer

--- a/petShopBAND/src/main/resources/application.properties
+++ b/petShopBAND/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 spring.jpa.open-in-view=false
 
 #h2
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdbPetShopBand
 spring.datasource.username=sa
 spring.datasource.password=
 
