Tentativa de ajuste do erro na criação do relacionamento entre a tabela cliente e tabel produto

--- a/petShopBAND/src/main/resources/application.properties
+++ b/petShopBAND/src/main/resources/application.properties
@@ -8,6 +8,8 @@
 
 spring.jpa.open-in-view=false
 
+spring.jpa.defer-datasource-initialization=true
+
 #h2
 spring.datasource.url=jdbc:h2:mem:testdbPetShopBand
 spring.datasource.username=sa
