--- a/petShopBAND/src/main/resources/application.properties
+++ b/petShopBAND/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
 
 #h2
-spring.datasource.url=jdbc:h2:mem:testdbPetShopBand
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
