--- a/petShopBAND/src/main/resources/application.properties
+++ b/petShopBAND/src/main/resources/application.properties
@@ -6,19 +6,19 @@
 #H2
 #spring.h2.console.enabled=true
 
-spring.jpa.open-in-view=false
+#spring.jpa.open-in-view=false
 
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.defer-datasource-initialization=true
 
 #h2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 #Configuraçãao do cliente 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 #Mostrar a consulto no console
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
