Finalmente achei o erro de conxão com banco H2

--- a/petShopBAND/src/main/resources/application.properties
+++ b/petShopBAND/src/main/resources/application.properties
@@ -1,24 +1,35 @@
+# datasource ___ spring.datasource.driverClassName=org.h2.Driver >>> aqui coloca o driver do banco postgresql/mysql 
+spring.datasource.driverClassName=org.h2.Driver 
+spring.datasource.url=jdbc:h2:mem:PetShopBand_DB
+spring.datasource.username=sa
+spring.datasource.password=
+
+# jpa 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Nova propriedade a partir da versao 2.5 do Spring Boot:
+spring.jpa.defer-datasource-initialization=true
+
+# h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 #JPA
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-
 #H2
 #spring.h2.console.enabled=true
-
 #spring.jpa.open-in-view=false
-
 #spring.jpa.defer-datasource-initialization=true
-
 #h2
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.username=sa
 #spring.datasource.password=
-
 #Configuraçãao do cliente 
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
-
 #Mostrar a consulto no console
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
