--- a/petShopBAND/pom.xml
+++ b/petShopBAND/pom.xml
@@ -17,6 +17,15 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+	
+		<dependency>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-resources-plugin</artifactId>
+		  <version>3.2.0</version>
+		  <type>maven-plugin</type>
+		</dependency>
+			
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -65,9 +74,11 @@
 
 	<build>
 		<plugins>
+		
+			
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<artifactId>spring-boot-maven-plugin</artifactId>				
 				<configuration>
 					<excludes>
 						<exclude>
