Ajustando os erros da tabela import-sql e ajuste do relacionamento das classes

--- a/petShopBAND/src/main/resources/application.properties
+++ b/petShopBAND/src/main/resources/application.properties
@@ -1,19 +1,42 @@
-# datasource ___ spring.datasource.driverClassName=org.h2.Driver >>> aqui coloca o driver do banco postgresql/mysql 
-spring.datasource.driverClassName=org.h2.Driver 
-spring.datasource.url=jdbc:h2:mem:PetShopBand_DB
+spring.datasource.url=jdbc:h2:~/testdb 
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# jpa 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.h2.console.path=/h2-console
+
 spring.jpa.hibernate.ddl-auto=update
 
+
+
+
+# datasource ___ spring.datasource.driverClassName=org.h2.Driver >>> aqui coloca o driver do banco postgresql/mysql 
+#spring.datasource.driverClassName=org.h2.Driver 
+#spring.datasource.url=jdbc:h2:mem:PetShopBand_DB
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+# jpa 
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+
 # Nova propriedade a partir da versao 2.5 do Spring Boot:
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.defer-datasource-initialization=true
 
 # h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+
+
+
+
+
+
 
 #JPA
 #spring.jpa.hibernate.ddl-auto=update
