--- a/FrontEnd-PetShopBand/front-petshopband/package.json
+++ b/FrontEnd-PetShopBand/front-petshopband/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-pet-shop-band",
+  "name": "front-petshopband",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,19 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.16",
-    "@angular/cdk": "^11.0.0",
-    "@angular/common": "~12.2.16",
-    "@angular/compiler": "~12.2.16",
-    "@angular/core": "~12.2.16",
-    "@angular/forms": "~12.2.16",
-    "@angular/platform-browser": "~12.2.16",
-    "@angular/platform-browser-dynamic": "~12.2.16",
-    "@angular/router": "~12.2.16",
-    "@nebular/eva-icons": "7.0.4",
-    "@nebular/theme": "^7.0.4",
-    "eva-icons": "^1.1.2",
-    "install": "^0.13.0",
+    "@angular/animations": "~11.2.14",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/core": "~11.2.14",
+    "@angular/forms": "~11.2.14",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -31,8 +26,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.13",
     "@angular/cli": "~11.2.14",
-    "@angular/compiler-cli": "~12.2.16",
-    "@schematics/angular": "~11.2.14",
+    "@angular/compiler-cli": "~11.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -46,6 +40,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.1.5"
   }
 }
