--- a/FrontEnd-PetShopBand/front-petshopband/package.json
+++ b/FrontEnd-PetShopBand/front-petshopband/package.json
@@ -32,6 +32,7 @@
     "@angular-devkit/build-angular": "^13.2.5",
     "@angular/cli": "^13.2.5",
     "@angular/compiler-cli": "^13.2.4",
+    "@schematics/angular": "^13.2.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
