--- a/FrontEnd-PetShopBand/front-petshopband/package.json
+++ b/FrontEnd-PetShopBand/front-petshopband/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular-devkit/architect": "^0.1302.5",
     "@angular/animations": "^13.2.4",
-    "@angular/cdk": "^13.2.4",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "^13.2.4",
     "@angular/compiler": "^13.2.4",
     "@angular/core": "^13.2.4",
@@ -24,6 +24,7 @@
     "@nebular/auth": "^9.0.1",
     "@nebular/eva-icons": "^9.0.1",
     "@nebular/theme": "^9.0.1",
+    "audit": "^0.0.6",
     "eva-icons": "^1.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
